src/utils/compiler/naiada.output
Grammar

    0 $accept: program $end

    1 program: comp_units

    2 comp_units: comp_units function
    3           | comp_units primitive
    4           | function
    5           | primitive

    6 functions: functions function
    7          | function

    8 primitive: PRIMITIVE ID IS prim_decls functions END ID ';'

    9 function: PROCEDURE ID '(' formals ')' IS decls BGN stmnts END ID ';'
   10         | PROCEDURE ID IS decls BGN stmnts END ID ';'
   11         | FUNCTION ID '(' formals ')' RETURN BASIC_TYPE IS decls BGN stmnts END ID ';'
   12         | FUNCTION ID RETURN BASIC_TYPE IS decls BGN stmnts END ID ';'

   13 prim_decls: prim_decls prim_decl
   14           | prim_decl

   15 prim_decl: ID ':' IN BASIC_TYPE ';'
   16          | ID ':' OUT BASIC_TYPE ';'

   17 formals: formals ';' formal
   18        | formal

   19 formal: ID ':' type

   20 decls: decls decl
   21      | /* empty */

   22 decl: ID ':' type ';'

   23 type: BASIC_TYPE
   24     | ADDR_TYPE '(' BASIC_TYPE ')'

   25 stmnts: stmnts stmnt
   26       | stmnt

   27 stmnt: ID ASSIGN expr ';'
   28      | ASM '(' STRING_CONST ')' ';'
   29      | IF expr THEN stmnts END IF ';'
   30      | IF expr THEN stmnts ELSE stmnts END IF ';'
   31      | WHILE expr LOOP stmnts END LOOP ';'
   32      | RETURN expr ';'
   33      | RETURN ';'
   34      | ID '(' actuals ')' ';'
   35      | LOOP stmnts END LOOP ';'
   36      | EXIT ';'
   37      | NULL_STMNT ';'
   38      | LBL_LEFT ID LBL_RIGHT
   39      | GOTO ID ';'

   40 expr: MINUSOP expr
   41     | NOTOP expr
   42     | unaryop '(' expr ')'
   43     | expr PLUSOP expr
   44     | expr MINUSOP expr
   45     | expr MULDIVOP expr
   46     | expr ANDOP expr
   47     | expr OROP expr
   48     | expr EQOP expr
   49     | expr LELTOP expr
   50     | expr MEMTOP expr
   51     | '(' expr ')'
   52     | ID '(' actuals ')'
   53     | ID
   54     | ADDR_TYPE '(' ID ')'
   55     | INT_CONST
   56     | BOOL_CONST
   57     | FLOAT_CONST
   58     | '[' expr ',' expr ',' expr ']'
   59     | '[' '[' expr ',' expr ',' expr ']' ',' '[' expr ',' expr ',' expr ']' ',' '[' expr ',' expr ',' expr ']' ']'
   60     | VEC_COMP
   61     | MAT_COMP

   62 unaryop: BASIC_TYPE
   63        | MATH_TYPE

   64 actuals: exprs
   65        | /* empty */

   66 exprs: exprs ',' expr
   67      | expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 11 24 28 34 42 51 52 54
')' (41) 9 11 24 28 34 42 51 52 54
',' (44) 58 59 66
':' (58) 15 16 19 22
';' (59) 8 9 10 11 12 15 16 17 22 27 28 29 30 31 32 33 34 35 36 37
    39
'[' (91) 58 59
']' (93) 58 59
error (256)
OROP (258) 47
ANDOP (259) 46
EQOP (260) 48
MEMTOP (261) 50
LELTOP (262) 49
PLUSOP (263) 43
MINUSOP (264) 40 44
MULDIVOP (265) 45
UNOP (266)
NOTOP (267) 41
BASIC_TYPE (268) 11 12 15 16 23 24 62
ID (269) 8 9 10 11 12 15 16 19 22 27 34 38 39 52 53 54
BOOL_CONST (270) 56
STRING_CONST (271) 28
VEC_COMP (272) 60
MAT_COMP (273) 61
INT_CONST (274) 55
FLOAT_CONST (275) 57
IF (276) 29 30
THEN (277) 29 30
ELSE (278) 30
WHILE (279) 31
RETURN (280) 11 12 32 33
END (281) 8 9 10 11 12 29 30 31 35
EXIT (282) 36
LOOP (283) 31 35
PROCEDURE (284) 9 10
FUNCTION (285) 11 12
IS (286) 8 9 10 11 12
BGN (287) 9 10 11 12
ASSIGN (288) 27
ASM (289) 28
ADDR_TYPE (290) 24 54
NULL_STMNT (291) 37
LBL_LEFT (292) 38
LBL_RIGHT (293) 38
GOTO (294) 39
PRIMITIVE (295) 8
IN (296) 15
OUT (297) 16
MATH_TYPE (298) 63


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
comp_units (53)
    on left: 2 3 4 5, on right: 1 2 3
functions (54)
    on left: 6 7, on right: 6 8
primitive (55)
    on left: 8, on right: 3 5
function (56)
    on left: 9 10 11 12, on right: 2 4 6 7
prim_decls (57)
    on left: 13 14, on right: 8 13
prim_decl (58)
    on left: 15 16, on right: 13 14
formals (59)
    on left: 17 18, on right: 9 11 17
formal (60)
    on left: 19, on right: 17 18
decls (61)
    on left: 20 21, on right: 9 10 11 12 20
decl (62)
    on left: 22, on right: 20
type (63)
    on left: 23 24, on right: 19 22
stmnts (64)
    on left: 25 26, on right: 9 10 11 12 25 29 30 31 35
stmnt (65)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39, on right: 25 26
expr (66)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61, on right: 27 29 30 31 32 40 41 42 43 44 45 46 47 48
    49 50 51 58 59 66 67
unaryop (67)
    on left: 62 63, on right: 42
actuals (68)
    on left: 64 65, on right: 34 52
exprs (69)
    on left: 66 67, on right: 64 66


state 0

    0 $accept: . program $end

    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2
    PRIMITIVE  shift, and go to state 3

    program     go to state 4
    comp_units  go to state 5
    primitive   go to state 6
    function    go to state 7


state 1

    9 function: PROCEDURE . ID '(' formals ')' IS decls BGN stmnts END ID ';'
   10         | PROCEDURE . ID IS decls BGN stmnts END ID ';'

    ID  shift, and go to state 8


state 2

   11 function: FUNCTION . ID '(' formals ')' RETURN BASIC_TYPE IS decls BGN stmnts END ID ';'
   12         | FUNCTION . ID RETURN BASIC_TYPE IS decls BGN stmnts END ID ';'

    ID  shift, and go to state 9


state 3

    8 primitive: PRIMITIVE . ID IS prim_decls functions END ID ';'

    ID  shift, and go to state 10


state 4

    0 $accept: program . $end

    $end  shift, and go to state 11


state 5

    1 program: comp_units .
    2 comp_units: comp_units . function
    3           | comp_units . primitive

    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2
    PRIMITIVE  shift, and go to state 3

    $default  reduce using rule 1 (program)

    primitive  go to state 12
    function   go to state 13


state 6

    5 comp_units: primitive .

    $default  reduce using rule 5 (comp_units)


state 7

    4 comp_units: function .

    $default  reduce using rule 4 (comp_units)


state 8

    9 function: PROCEDURE ID . '(' formals ')' IS decls BGN stmnts END ID ';'
   10         | PROCEDURE ID . IS decls BGN stmnts END ID ';'

    IS   shift, and go to state 14
    '('  shift, and go to state 15


state 9

   11 function: FUNCTION ID . '(' formals ')' RETURN BASIC_TYPE IS decls BGN stmnts END ID ';'
   12         | FUNCTION ID . RETURN BASIC_TYPE IS decls BGN stmnts END ID ';'

    RETURN  shift, and go to state 16
    '('     shift, and go to state 17


state 10

    8 primitive: PRIMITIVE ID . IS prim_decls functions END ID ';'

    IS  shift, and go to state 18


state 11

    0 $accept: program $end .

    $default  accept


state 12

    3 comp_units: comp_units primitive .

    $default  reduce using rule 3 (comp_units)


state 13

    2 comp_units: comp_units function .

    $default  reduce using rule 2 (comp_units)


state 14

   10 function: PROCEDURE ID IS . decls BGN stmnts END ID ';'

    $default  reduce using rule 21 (decls)

    decls  go to state 19


state 15

    9 function: PROCEDURE ID '(' . formals ')' IS decls BGN stmnts END ID ';'

    ID  shift, and go to state 20

    formals  go to state 21
    formal   go to state 22


state 16

   12 function: FUNCTION ID RETURN . BASIC_TYPE IS decls BGN stmnts END ID ';'

    BASIC_TYPE  shift, and go to state 23


state 17

   11 function: FUNCTION ID '(' . formals ')' RETURN BASIC_TYPE IS decls BGN stmnts END ID ';'

    ID  shift, and go to state 20

    formals  go to state 24
    formal   go to state 22


state 18

    8 primitive: PRIMITIVE ID IS . prim_decls functions END ID ';'

    ID  shift, and go to state 25

    prim_decls  go to state 26
    prim_decl   go to state 27


state 19

   10 function: PROCEDURE ID IS decls . BGN stmnts END ID ';'
   20 decls: decls . decl

    ID   shift, and go to state 28
    BGN  shift, and go to state 29

    decl  go to state 30


state 20

   19 formal: ID . ':' type

    ':'  shift, and go to state 31


state 21

    9 function: PROCEDURE ID '(' formals . ')' IS decls BGN stmnts END ID ';'
   17 formals: formals . ';' formal

    ';'  shift, and go to state 32
    ')'  shift, and go to state 33


state 22

   18 formals: formal .

    $default  reduce using rule 18 (formals)


state 23

   12 function: FUNCTION ID RETURN BASIC_TYPE . IS decls BGN stmnts END ID ';'

    IS  shift, and go to state 34


state 24

   11 function: FUNCTION ID '(' formals . ')' RETURN BASIC_TYPE IS decls BGN stmnts END ID ';'
   17 formals: formals . ';' formal

    ';'  shift, and go to state 32
    ')'  shift, and go to state 35


state 25

   15 prim_decl: ID . ':' IN BASIC_TYPE ';'
   16          | ID . ':' OUT BASIC_TYPE ';'

    ':'  shift, and go to state 36


state 26

    8 primitive: PRIMITIVE ID IS prim_decls . functions END ID ';'
   13 prim_decls: prim_decls . prim_decl

    ID         shift, and go to state 25
    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2

    functions  go to state 37
    function   go to state 38
    prim_decl  go to state 39


state 27

   14 prim_decls: prim_decl .

    $default  reduce using rule 14 (prim_decls)


state 28

   22 decl: ID . ':' type ';'

    ':'  shift, and go to state 40


state 29

   10 function: PROCEDURE ID IS decls BGN . stmnts END ID ';'

    ID          shift, and go to state 41
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    RETURN      shift, and go to state 44
    EXIT        shift, and go to state 45
    LOOP        shift, and go to state 46
    ASM         shift, and go to state 47
    NULL_STMNT  shift, and go to state 48
    LBL_LEFT    shift, and go to state 49
    GOTO        shift, and go to state 50

    stmnts  go to state 51
    stmnt   go to state 52


state 30

   20 decls: decls decl .

    $default  reduce using rule 20 (decls)


state 31

   19 formal: ID ':' . type

    BASIC_TYPE  shift, and go to state 53
    ADDR_TYPE   shift, and go to state 54

    type  go to state 55


state 32

   17 formals: formals ';' . formal

    ID  shift, and go to state 20

    formal  go to state 56


state 33

    9 function: PROCEDURE ID '(' formals ')' . IS decls BGN stmnts END ID ';'

    IS  shift, and go to state 57


state 34

   12 function: FUNCTION ID RETURN BASIC_TYPE IS . decls BGN stmnts END ID ';'

    $default  reduce using rule 21 (decls)

    decls  go to state 58


state 35

   11 function: FUNCTION ID '(' formals ')' . RETURN BASIC_TYPE IS decls BGN stmnts END ID ';'

    RETURN  shift, and go to state 59


state 36

   15 prim_decl: ID ':' . IN BASIC_TYPE ';'
   16          | ID ':' . OUT BASIC_TYPE ';'

    IN   shift, and go to state 60
    OUT  shift, and go to state 61


state 37

    6 functions: functions . function
    8 primitive: PRIMITIVE ID IS prim_decls functions . END ID ';'

    END        shift, and go to state 62
    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2

    function  go to state 63


state 38

    7 functions: function .

    $default  reduce using rule 7 (functions)


state 39

   13 prim_decls: prim_decls prim_decl .

    $default  reduce using rule 13 (prim_decls)


state 40

   22 decl: ID ':' . type ';'

    BASIC_TYPE  shift, and go to state 53
    ADDR_TYPE   shift, and go to state 54

    type  go to state 64


state 41

   27 stmnt: ID . ASSIGN expr ';'
   34      | ID . '(' actuals ')' ';'

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66


state 42

   29 stmnt: IF . expr THEN stmnts END IF ';'
   30      | IF . expr THEN stmnts ELSE stmnts END IF ';'

    MINUSOP      shift, and go to state 67
    NOTOP        shift, and go to state 68
    '['          shift, and go to state 69
    BASIC_TYPE   shift, and go to state 70
    ID           shift, and go to state 71
    BOOL_CONST   shift, and go to state 72
    VEC_COMP     shift, and go to state 73
    MAT_COMP     shift, and go to state 74
    INT_CONST    shift, and go to state 75
    FLOAT_CONST  shift, and go to state 76
    ADDR_TYPE    shift, and go to state 77
    MATH_TYPE    shift, and go to state 78
    '('          shift, and go to state 79

    expr     go to state 80
    unaryop  go to state 81


state 43

   31 stmnt: WHILE . expr LOOP stmnts END LOOP ';'

    MINUSOP      shift, and go to state 67
    NOTOP        shift, and go to state 68
    '['          shift, and go to state 69
    BASIC_TYPE   shift, and go to state 70
    ID           shift, and go to state 71
    BOOL_CONST   shift, and go to state 72
    VEC_COMP     shift, and go to state 73
    MAT_COMP     shift, and go to state 74
    INT_CONST    shift, and go to state 75
    FLOAT_CONST  shift, and go to state 76
    ADDR_TYPE    shift, and go to state 77
    MATH_TYPE    shift, and go to state 78
    '('          shift, and go to state 79

    expr     go to state 82
    unaryop  go to state 81


state 44

   32 stmnt: RETURN . expr ';'
   33      | RETURN . ';'

    MINUSOP      shift, and go to state 67
    NOTOP        shift, and go to state 68
    '['          shift, and go to state 69
    BASIC_TYPE   shift, and go to state 70
    ID           shift, and go to state 71
    BOOL_CONST   shift, and go to state 72
    VEC_COMP     shift, and go to state 73
    MAT_COMP     shift, and go to state 74
    INT_CONST    shift, and go to state 75
    FLOAT_CONST  shift, and go to state 76
    ADDR_TYPE    shift, and go to state 77
    MATH_TYPE    shift, and go to state 78
    ';'          shift, and go to state 83
    '('          shift, and go to state 79

    expr     go to state 84
    unaryop  go to state 81


state 45

   36 stmnt: EXIT . ';'

    ';'  shift, and go to state 85


state 46

   35 stmnt: LOOP . stmnts END LOOP ';'

    ID          shift, and go to state 41
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    RETURN      shift, and go to state 44
    EXIT        shift, and go to state 45
    LOOP        shift, and go to state 46
    ASM         shift, and go to state 47
    NULL_STMNT  shift, and go to state 48
    LBL_LEFT    shift, and go to state 49
    GOTO        shift, and go to state 50

    stmnts  go to state 86
    stmnt   go to state 52


state 47

   28 stmnt: ASM . '(' STRING_CONST ')' ';'

    '('  shift, and go to state 87


state 48

   37 stmnt: NULL_STMNT . ';'

    ';'  shift, and go to state 88


state 49

   38 stmnt: LBL_LEFT . ID LBL_RIGHT

    ID  shift, and go to state 89


state 50

   39 stmnt: GOTO . ID ';'

    ID  shift, and go to state 90


state 51

   10 function: PROCEDURE ID IS decls BGN stmnts . END ID ';'
   25 stmnts: stmnts . stmnt

    ID          shift, and go to state 41
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    RETURN      shift, and go to state 44
    END         shift, and go to state 91
    EXIT        shift, and go to state 45
    LOOP        shift, and go to state 46
    ASM         shift, and go to state 47
    NULL_STMNT  shift, and go to state 48
    LBL_LEFT    shift, and go to state 49
    GOTO        shift, and go to state 50

    stmnt  go to state 92


state 52

   26 stmnts: stmnt .

    $default  reduce using rule 26 (stmnts)


state 53

   23 type: BASIC_TYPE .

    $default  reduce using rule 23 (type)


state 54

   24 type: ADDR_TYPE . '(' BASIC_TYPE ')'

    '('  shift, and go to state 93


state 55

   19 formal: ID ':' type .

    $default  reduce using rule 19 (formal)


state 56

   17 formals: formals ';' formal .

    $default  reduce using rule 17 (formals)


state 57

    9 function: PROCEDURE ID '(' formals ')' IS . decls BGN stmnts END ID ';'

    $default  reduce using rule 21 (decls)

    decls  go to state 94


state 58

   12 function: FUNCTION ID RETURN BASIC_TYPE IS decls . BGN stmnts END ID ';'
   20 decls: decls . decl

    ID   shift, and go to state 28
    BGN  shift, and go to state 95

    decl  go to state 30


state 59

   11 function: FUNCTION ID '(' formals ')' RETURN . BASIC_TYPE IS decls BGN stmnts END ID ';'

    BASIC_TYPE  shift, and go to state 96


state 60

   15 prim_decl: ID ':' IN . BASIC_TYPE ';'

    BASIC_TYPE  shift, and go to state 97


state 61

   16 prim_decl: ID ':' OUT . BASIC_TYPE ';'

    BASIC_TYPE  shift, and go to state 98


state 62

    8 primitive: PRIMITIVE ID IS prim_decls functions END . ID ';'

    ID  shift, and go to state 99


state 63

    6 functions: functions function .

    $default  reduce using rule 6 (functions)


state 64

   22 decl: ID ':' type . ';'

    ';'  shift, and go to state 100


state 65

   27 stmnt: ID ASSIGN . expr ';'

    MINUSOP      shift, and go to state 67
    NOTOP        shift, and go to state 68
    '['          shift, and go to state 69
    BASIC_TYPE   shift, and go to state 70
    ID           shift, and go to state 71
    BOOL_CONST   shift, and go to state 72
    VEC_COMP     shift, and go to state 73
    MAT_COMP     shift, and go to state 74
    INT_CONST    shift, and go to state 75
    FLOAT_CONST  shift, and go to state 76
    ADDR_TYPE    shift, and go to state 77
    MATH_TYPE    shift, and go to state 78
    '('          shift, and go to state 79

    expr     go to state 101
    unaryop  go to state 81


state 66

   34 stmnt: ID '(' . actuals ')' ';'

    MINUSOP      shift, and go to state 67
    NOTOP        shift, and go to state 68
    '['          shift, and go to state 69
    BASIC_TYPE   shift, and go to state 70
    ID           shift, and go to state 71
    BOOL_CONST   shift, and go to state 72
    VEC_COMP     shift, and go to state 73
    MAT_COMP     shift, and go to state 74
    INT_CONST    shift, and go to state 75
    FLOAT_CONST  shift, and go to state 76
    ADDR_TYPE    shift, and go to state 77
    MATH_TYPE    shift, and go to state 78
    '('          shift, and go to state 79

    $default  reduce using rule 65 (actuals)

    expr     go to state 102
    unaryop  go to state 81
    actuals  go to state 103
    exprs    go to state 104


state 67

   40 expr: MINUSOP . expr
